test/corpus/hylo/StandardLibrary/Heap.txt
====
Heap
====

/// Allocates `size` bytes of uninitialized storage whose alignment is specified by `alignment`.
///
/// This function is similar to `aligned_alloc` from libc, except that it accepts any non-negative
/// `size` whereas `aligned_alloc` requires `size` to be an integral multiple of `alignment`. Use
/// this function when you need memory aligned at a specific boundary. Othwewise, use `malloc`.
///
/// Memory allocated with `hylo_aligned_alloc` must be deallocated with `hylo_aligned_free`.
///
/// - Parameters:
///   - alignment: The alignment of the allocated memory. Must be a power of 2.
///   - size: The number of bytes to allocate. Must be greater than 0.
/// - Returns: a pointer to newly allocated memory.
public fun hylo_aligned_alloc(_ alignment: Int, _ size: Int) -> MemoryAddress {

  // We allocate `size` plus the storage for a pointer and some padding to satisfy the alignment
  // requirement. The pointer to the allocated memory `p` is aligned to `alignment` and assigned
  // to `r`. The value of `p` is stored "behind" `r` for use in `hylo_aligned_alloc`.

  let s = MemoryLayout<MemoryAddress>.size()
  let a = alignment - 1
  let p = MemoryAddress(base: malloc(s + a + size).base)
  precondition(p != .null(), "out of memory")

  // precondition(((Int(bit_pattern: p) + s + a) & ~a) == (Int(bit_pattern: p) + 8))
  let r = MemoryAddress(bit_pattern: (Int(bit_pattern: p) + s + a) & ~a)
  let h = r.advance(by: -s)
  PointerToMutable<MemoryAddress>(type_punning: h).unsafe_initialize_pointee(p.copy())
  return r
}

/// Deallocates memory allocated by `hylo_aligned_alloc`.
///
/// No operation is performed if `pointer == .null()`.
public fun hylo_aligned_free(_ pointer: MemoryAddress) {
  if pointer == .null() { return }

  let s = MemoryLayout<MemoryAddress>.size()
  let h = pointer.advance(by: -s)
  let p = PointerToMutable<MemoryAddress>(type_punning: h).unsafe[].copy()
  free(p)
}

---

(source_file
  (single_line_comment)
  (single_line_comment)
  (single_line_comment)
  (single_line_comment)
  (single_line_comment)
  (single_line_comment)
  (single_line_comment)
  (single_line_comment)
  (single_line_comment)
  (single_line_comment)
  (single_line_comment)
  (single_line_comment)
  (function_decl
    (function_head
      (access_modifier)
      (function_name
        (identifier)))
    (function_signature
      (parameter_decl
        (identifier)
        (name_type_expr
          (selector
            (identifier_expr
              (identifier)))))
      (parameter_decl
        (identifier)
        (name_type_expr
          (selector
            (identifier_expr
              (identifier)))))
      (name_type_expr
        (selector
          (identifier_expr
            (identifier)))))
    (brace_stmt
      (single_line_comment)
      (single_line_comment)
      (single_line_comment)
      (stmt
        (binding_decl
          (binding_pattern
            (binding_introducer)
            (identifier))
          (function_call_expr
            (value_member_expr
              (selector_expr
                (selector
                  (identifier_expr
                    (identifier))
                  (static_argument_list
                    (static_argument
                      (name_type_expr
                        (selector
                          (identifier_expr
                            (identifier))))))))
              (selector
                (identifier_expr
                  (identifier)))))))
      (stmt
        (binding_decl
          (binding_pattern
            (binding_introducer)
            (identifier))
          (infix_expr
            (selector_expr
              (selector
                (identifier_expr
                  (identifier))))
            (infix_operator_tail
              (infix_operator)
              (integer_literal
                (decimal_literal))))))
      (stmt
        (binding_decl
          (binding_pattern
            (binding_introducer)
            (identifier))
          (function_call_expr
            (selector_expr
              (selector
                (identifier_expr
                  (identifier))))
            (call_argument
              (identifier)
              (value_member_expr
                (function_call_expr
                  (selector_expr
                    (selector
                      (identifier_expr
                        (identifier))))
                  (call_argument
                    (infix_expr
                      (selector_expr
                        (selector
                          (identifier_expr
                            (identifier))))
                      (infix_operator_tail
                        (infix_operator)
                        (selector_expr
                          (selector
                            (identifier_expr
                              (identifier)))))
                      (infix_operator_tail
                        (infix_operator)
                        (selector_expr
                          (selector
                            (identifier_expr
                              (identifier))))))))
                (selector
                  (identifier_expr
                    (identifier))))))))
      (stmt
        (function_call_expr
          (selector_expr
            (selector
              (identifier_expr
                (identifier))))
          (call_argument
            (assignment_expr
              (selector_expr
                (selector
                  (identifier_expr
                    (identifier))))
              (assignment_operator)
              (function_call_expr
                (implicit_member_ref
                  (selector
                    (identifier_expr
                      (identifier)))))))
          (call_argument
            (string_literal
              (simple_string)))))
      (single_line_comment)
      (stmt
        (binding_decl
          (binding_pattern
            (binding_introducer)
            (identifier))
          (function_call_expr
            (selector_expr
              (selector
                (identifier_expr
                  (identifier))))
            (call_argument
              (identifier)
              (infix_expr
                (tuple_expr
                  (tuple_expr_element
                    (infix_expr
                      (function_call_expr
                        (selector_expr
                          (selector
                            (identifier_expr
                              (identifier))))
                        (call_argument
                          (identifier)
                          (selector_expr
                            (selector
                              (identifier_expr
                                (identifier))))))
                      (infix_operator_tail
                        (infix_operator)
                        (selector_expr
                          (selector
                            (identifier_expr
                              (identifier)))))
                      (infix_operator_tail
                        (infix_operator)
                        (selector_expr
                          (selector
                            (identifier_expr
                              (identifier))))))))
                (infix_operator_tail
                  (infix_operator)
                  (prefix_expr
                    (prefix_operator)
                    (selector_expr
                      (selector
                        (identifier_expr
                          (identifier)))))))))))
      (stmt
        (binding_decl
          (binding_pattern
            (binding_introducer)
            (identifier))
          (function_call_expr
            (value_member_expr
              (selector_expr
                (selector
                  (identifier_expr
                    (identifier))))
              (selector
                (identifier_expr
                  (identifier))))
            (call_argument
              (identifier)
              (prefix_expr
                (prefix_operator)
                (selector_expr
                  (selector
                    (identifier_expr
                      (identifier)))))))))
      (stmt
        (function_call_expr
          (value_member_expr
            (function_call_expr
              (selector_expr
                (selector
                  (identifier_expr
                    (identifier))
                  (static_argument_list
                    (static_argument
                      (name_type_expr
                        (selector
                          (identifier_expr
                            (identifier))))))))
              (call_argument
                (identifier)
                (selector_expr
                  (selector
                    (identifier_expr
                      (identifier))))))
            (selector
              (identifier_expr
                (identifier))))
          (call_argument
            (function_call_expr
              (value_member_expr
                (selector_expr
                  (selector
                    (identifier_expr
                      (identifier))))
                (selector
                  (identifier_expr
                    (identifier))))))))
      (stmt
        (jump_stmt
          (selector_expr
            (selector
              (identifier_expr
                (identifier))))))))
  (single_line_comment)
  (single_line_comment)
  (single_line_comment)
  (function_decl
    (function_head
      (access_modifier)
      (function_name
        (identifier)))
    (function_signature
      (parameter_decl
        (identifier)
        (name_type_expr
          (selector
            (identifier_expr
              (identifier))))))
    (brace_stmt
      (stmt
        (conditional_expr
          (conditional_clause_item
            (infix_expr
              (selector_expr
                (selector
                  (identifier_expr
                    (identifier))))
              (infix_operator_tail
                (infix_operator)
                (function_call_expr
                  (implicit_member_ref
                    (selector
                      (identifier_expr
                        (identifier))))))))
          (brace_stmt
            (stmt
              (jump_stmt)))))
      (stmt
        (binding_decl
          (binding_pattern
            (binding_introducer)
            (identifier))
          (function_call_expr
            (value_member_expr
              (selector_expr
                (selector
                  (identifier_expr
                    (identifier))
                  (static_argument_list
                    (static_argument
                      (name_type_expr
                        (selector
                          (identifier_expr
                            (identifier))))))))
              (selector
                (identifier_expr
                  (identifier)))))))
      (stmt
        (binding_decl
          (binding_pattern
            (binding_introducer)
            (identifier))
          (function_call_expr
            (value_member_expr
              (selector_expr
                (selector
                  (identifier_expr
                    (identifier))))
              (selector
                (identifier_expr
                  (identifier))))
            (call_argument
              (identifier)
              (prefix_expr
                (prefix_operator)
                (selector_expr
                  (selector
                    (identifier_expr
                      (identifier)))))))))
      (stmt
        (binding_decl
          (binding_pattern
            (binding_introducer)
            (identifier))
          (function_call_expr
            (value_member_expr
              (subscript_call_expr
                (value_member_expr
                  (function_call_expr
                    (selector_expr
                      (selector
                        (identifier_expr
                          (identifier))
                        (static_argument_list
                          (static_argument
                            (name_type_expr
                              (selector
                                (identifier_expr
                                  (identifier))))))))
                    (call_argument
                      (identifier)
                      (selector_expr
                        (selector
                          (identifier_expr
                            (identifier))))))
                  (selector
                    (identifier_expr
                      (identifier)))))
              (selector
                (identifier_expr
                  (identifier)))))))
      (stmt
        (function_call_expr
          (selector_expr
            (selector
              (identifier_expr
                (identifier))))
          (call_argument
            (selector_expr
              (selector
                (identifier_expr
                  (identifier))))))))))
